[gd_scene load_steps=4 format=3 uid="uid://djngtr0nrfws2"]

[ext_resource type="Script" path="res://addons/dialogueeditor/GraphEditor.gd" id="1_sb36e"]
[ext_resource type="PackedScene" uid="uid://dwarlyfe3542a" path="res://addons/dialogueeditor/TextNode.tscn" id="2_n5q01"]
[ext_resource type="PackedScene" uid="uid://cx8ybdpdebq1c" path="res://addons/dialogueeditor/ContextMenu.tscn" id="3_alo6s"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GraphEdit" type="GraphEdit" parent="."]
layout_mode = 1
offset_right = 1920.0
offset_bottom = 1080.0
right_disconnects = true
scroll_offset = Vector2(-154, -83)
script = ExtResource("1_sb36e")

[node name="StartNode" type="GraphNode" parent="GraphEdit"]
layout_mode = 0
offset_left = 74.0
offset_top = 349.0
offset_right = 245.0
offset_bottom = 409.0
mouse_filter = 1
title = "Start"
position_offset = Vector2(-80, 266)
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true

[node name="Control" type="Control" parent="GraphEdit/StartNode"]
layout_mode = 2

[node name="TextNode2" parent="GraphEdit" instance=ExtResource("2_n5q01")]
layout_mode = 0
offset_left = 771.0
offset_top = 237.0
offset_right = 1094.0
offset_bottom = 487.0
mouse_filter = 1
position_offset = Vector2(617, 154)

[node name="TextNode" parent="GraphEdit" instance=ExtResource("2_n5q01")]
layout_mode = 0
offset_left = 343.0
offset_top = 219.0
offset_right = 666.0
offset_bottom = 469.0
mouse_filter = 1
position_offset = Vector2(189, 136)

[node name="ContextMenu" parent="." instance=ExtResource("3_alo6s")]
layout_mode = 0
offset_left = 14.0
offset_top = -170.0
offset_right = 202.0
offset_bottom = -54.0

[node name="Save" type="Button" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 73.0
offset_right = 179.0
offset_bottom = 111.0
text = "Save Dialogue"

[node name="FileDialog" type="FileDialog" parent="."]
size = Vector2i(1000, 1000)

[node name="DebugDialogue" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[connection signal="connection_request" from="GraphEdit" to="GraphEdit" method="_on_connection_request"]
[connection signal="disconnection_request" from="GraphEdit" to="GraphEdit" method="_on_disconnection_request"]
[connection signal="gui_input" from="GraphEdit" to="GraphEdit" method="_on_gui_input"]
[connection signal="popup_request" from="GraphEdit" to="GraphEdit" method="_on_popup_request"]
[connection signal="slot_updated" from="GraphEdit/StartNode" to="GraphEdit" method="_on_start_node_slot_updated"]
[connection signal="pressed" from="Save" to="GraphEdit" method="_on_save_pressed"]
[connection signal="pressed" from="DebugDialogue" to="GraphEdit" method="_on_debug_dialogue_pressed"]
